--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,10 +1,10 @@
-name: Test
+name: Master
 on:
   push:
     branches: [ master ]
 jobs:
   test:
-    name: Test
+    name: Test and Push
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -20,12 +20,7 @@ jobs:
       - name: 'Test: POST (ssl)'
         uses: ./build
         with: { url: 'https://httpbin.org/post' }
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - uses: "actions/docker/login@master"
+      - uses: actions/docker/login@master
         env:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -33,8 +28,5 @@ jobs:
         with: { args: 'build -t josa/gh-action-webhook:latest .' }
       - uses: actions/docker/cli@master
         with: { args: 'push josa/gh-action-webhook:latest' }
-      - name: 'Test: POST (ssl)'
-        uses: ./
-        with: { url: 'https://httpbin.org/post' }
 
 
