--- a/action.yml
+++ b/action.yml
@@ -4,11 +4,13 @@ description: |
   Trigger Webkhooks
 inputs:
   url:
-    description: 'url to request'
     required: true
   method:
     default: 'POST'
 runs:
   using: 'docker'
-  image: 'docker://josa/gh-action-webhook'
+  image: 'docker://josa/gh-action-webhook:latest'
+branding:
+  icon: 'refresh-ccw'
+  color: 'blue'
 
