--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -7,10 +7,13 @@ jobs:
     name: Run Webhooks
     runs-on: ubuntu-latest
     steps:
-      - uses: josa42/gh-action-webhook@master
+      - uses: josa42/gh-action-webhook/build@master
         with:
           url: http://httpbin.org/post
-      - uses: josa42/gh-action-webhook/build@d111e4e
+      - uses: josa42/gh-action-webhook/release@master
+        with:
+          url: http://httpbin.org/post
+      - uses: josa42/gh-action-webhook/latest@master
         with:
           url: http://httpbin.org/post
 
