Add authorization option

--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -20,4 +20,10 @@ jobs:
         with:
           url: http://httpbin.org/post
           data: '{ "data": "Hallo Welt" }'
+      - uses: josa42/gh-action-webhook@master
+        with:
+          url: http://httpbin.org/post
+          data: '{ "data": "TEST" }'
+          authorization: 'Bearer ${{ secrets.TOKEN }}'
+
 
