Add content_type input

--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -7,28 +7,13 @@ jobs:
     name: Run Webhooks
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - uses: josa42/gh-action-webhook/latest@master
-        with:
-          url: http://httpbin.org/post
-      - uses: josa42/gh-action-webhook/release@0.1.0
-        with:
-          url: http://httpbin.org/post
-      - uses: josa42/gh-action-webhook/latest@master
-        with:
-          url: http://httpbin.org/post
-      - uses: josa42/gh-action-webhook/latest@master
-        with:
-          url: http://httpbin.org/post
-          data: '{ "data": "Hallo Welt" }'
-      - uses: josa42/gh-action-webhook@master
-        with:
-          url: http://httpbin.org/post
-          data: '{ "data": "TEST" }'
-          authorization: 'Bearer ${{ secrets.TOKEN }}'
+      - uses: 'josa42/gh-action-webhook/release@0.1.0'
+        with: { url: 'https://httpbin.org/post' }
+      - uses: 'josa42/gh-action-webhook/latest@master'
+        with: { url: 'https://httpbin.org/post' }
       - uses: 'josa42/gh-action-webhook/latest@master'
         with:
           url:  'https://hooks.slack.com/services/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'
-          data: '{ "text": "Hello World! (${{github.ref}})" }'
+          data: '{ "text": "Hello World! (from: ${{github.repository}} / ${{github.ref}})" }'
 
 
